--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+#sorting-area{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:center;
+  display: flex;
+  width: 100%;
+  margin-bottom: 5%;
+}
